# Tracking-it

./: CMakeLists.txt  README.md  package.xml
config/: conveyor_tracking.yaml  conveyor_trajectory.yaml  conveyor_trajectory.yaml~  kinect2conveyor_tf.yaml  kinect2conveyor_tf.yaml~  kinect2kuka_tf.yaml  kinect2kuka_tf.yaml~
include/: Background_filter.h  Conveyor_filter.h  Conveyor_scanner.h  Conveyor_trajectory.h  Object_tracker.h  Observed_object.h  Tracked_object.h  pcl_types.h
launch/: intialize_transformations.launch  intialize_transformations.launch~  object_tracking.launch  object_tracking.launch~  transformations.launch~
msg/: ConveyorTrajectory.msg
src/: Background_filter.cpp  Conveyor_filter.cpp  Conveyor_scanner.cpp  Conveyor_trajectory.cpp  HowToUse.txt  Object_tracker.cpp  Tracked_object.cpp  conveyor_filtering_node.cpp  conveyor_scanning_node.cpp  object_tracking_node.cpp
